<resources>
    <string name="app_name">Java OOP Quiz and Answers!</string>
    <string name="question1title">Question 1</string>
    <string name="question2title">Question 2</string>
    <string name="question3title">Question 3</string>
    <string name="question4title">Question 4</string>
    <string name="question5title">Question 5</string>
    <string name="question1">Abstraction hides the:</string>
    <string name="answerClass">Class</string>
    <string name="answerComplexity">Complexity</string>
    <string name="question2">In the case of method overloading, there must be an IS-A relationship?</string>
    <string name="answertrue">True</string>
    <string name="answerfalse">False</string>
    <string name="question3">OOP promotes a way of programming, that allows programmers to think in terms of?</string>
    <string name="InputAnswer"> Please Input Answer</string>
    <string name="question4">If there is a private method in the class, which type of binding will take place?:</string>
    <string name="answerDynamic">Dynamic</string>
    <string name="question5">Name should be stated with a lowercase letter in the case of which of the following?</string>
    <string name="submit">Submit</string>
    <string name="answerStatic">Static</string>
    <string name="answerInterface">Interface</string>
    <string name="answerMethod">Method</string>
    <string name="answerrbtnClass">Class</string>
    <string name="answer3">Youre Answer for Question 3 (OOP promotes a way of programming, that allows programmers to think in terms of?) was:</string>
    <string name="hello">Hello</string>
    <string name="qn1answer">You\'re Answer for Question 1 (Abstration hides the) was :</string>
    <string name="qn2anwer">You\'re Answer for Question 2 (In the case of method overloading, there must be an IS-A relationship) was :</string>
    <string name="qn4answer">You\'re Answer for Question 4 (If there is a private method in the class, which type of binding will take place?)was :</string>
    <string name="qn5answer">You\'re Answer for Question 5 (Name should be stated with a lowercase letter in the case of which of the following?) was :</string>
    <string name="thankyou">Thank you for taking the time to participate in the Java OOP Quiz. Below are the Answers to the Questions asked.</string>
    <string name="answers1text">Question 1: Abstration hides the :</string>
    <string name="answers1">Complexity of a class and not the class itself</string>
    <string name="answers2text">Question 2: In the case of method overloading, there must be an IS-A relationship :</string>
    <string name="answers2">This is false because method oveloading deals with methods in the same class so there is no Inheritance involved</string>
    <string name="answers3text">Question 3: OOP promotes a way of programming, that allows programmers to think in terms of?</string>
    <string name="answers3">Object Oriented programming allows programmers to think int terms of Objects</string>
    <string name="answers4text">Question 4: If there is a private method in the class, which type of binding will take place? :</string>
    <string name="answers4">Private methods in a class can only be bound statically because when they are made private, the compiler will only determine them at compiled time.</string>
    <string name="answers5text">Question 5: Name should be stated with a lowercase letter in the case of which of the following?:</string>
    <string name="answers5">In Java, Methods are always defined starting with a lowercase letter while Classes and Interfaces always start with uppercase letters</string>
    <string name="hope">Hope you learnt 5 new things about Java Object Oriented Programming. Thank you !</string>
    <string name="Hint">Please Enter Your Name</string>
</resources>