<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.helloworld.assignmentwork.MainActivity">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="9dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="100dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <EditText
                    android:id="@+id/EnterNameInput"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/Hint"
                    android:textAlignment="center"
                    android:layout_margin="20dp"
                    />


                <TextView
                    android:id="@+id/textView2"
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1title"
                    android:textColor="#283593" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textColor="#000000"
                    />


                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/Question1Radio">

                        <RadioButton
                            android:id="@+id/radio_class_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answerClass"/>


                         <RadioButton
                        android:id="@+id/radio_complexity_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerComplexity"/>

                    </RadioGroup>




                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2title"
                    android:textColor="#283593"/>

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textColor="#000000"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/Question2Radio">

                    <RadioButton
                        android:id="@+id/radio_true_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answertrue" />

                    <RadioButton
                        android:id="@+id/radio_false_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerfalse" />


                </RadioGroup>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3title"
                    android:textColor="#283593"/>

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/Question3answerInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/InputAnswer"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="#000000" />


                <TextView
                    android:id="@+id/textView"
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4title"
                    android:textColor="#283593" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textColor="#000000"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/Question4Radio">

                    <RadioButton
                        android:id="@+id/radio_static_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerStatic" />

                    <RadioButton
                        android:id="@+id/radio_dynamic_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerDynamic" />

                </RadioGroup>


                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5title"
                    android:textColor="#283593"/>

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:textColor="#000000"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/Question5Radio">

                    <RadioButton
                        android:id="@+id/radio_interface_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerInterface" />

                    <RadioButton
                        android:id="@+id/radio_method_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerMethod"/>

                    <RadioButton
                        android:id="@+id/radio_classQn5_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answerrbtnClass"/>

                </RadioGroup>


                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/submit"
                    android:onClick="answers()"/>
            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>