<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.helloworld.assignmentwork.MainActivity">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="9dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="100dp">


<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/thankyou"
            android:textSize="20dp"
            android:padding="12dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/text1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/answers1text"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#283593"
            />

        <TextView
            android:id="@+id/textQuestion1Output"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:padding="12dp"
            android:text="@string/answers1"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/answers2text"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#283593"

            />


        <TextView
            android:id="@+id/textQuestion2Output"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:text="@string/answers2"
            />


        <TextView
            android:id="@+id/text3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/answers3text"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#283593"
            />


        <TextView
            android:id="@+id/textQuestion3Output"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:text="@string/answers3"
            />


        <TextView
            android:id="@+id/text4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/answers4text"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#283593"
            />


        <TextView
            android:id="@+id/textQuestion4Output"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:text="@string/answers4"

            />


        <TextView
            android:id="@+id/text5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/answers5text"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#283593"
            />


              <TextView
            android:id="@+id/textQuestion5Output"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:text="@string/answers5"
            />
        <TextView
            android:id="@+id/textConclusion"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:text="@string/hope"

            />



    </LinearLayout>
</ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>